# GearClaw

./: .gitignore  AGENTS.md  Cargo.toml  DISCORD_SETUP.md  DISCORD_TEST_CHECKLIST.md  MACOS_TOOLS.md  README.md  TESTING_SUMMARY.md  diagnose_discord.sh  diagnose_embedding.sh  fix_discord.sh  gear_claw.sample.toml  gearclaw.sample.toml  setup_discord.sh  start_discord.sh  test_discord.sh  test_discord_message.sh  test_memory.sh
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/channels/: Cargo.toml
crates/channels/src/: adapter.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml  MEMORY.md
crates/core/src/: agent.rs  config.rs  error.rs  lib.rs  llm.rs  mcp.rs  skills.rs  tools.rs
crates/core/src/macos/: app.rs  applescript.rs  clipboard.rs  input.rs  mod.rs  notification.rs  system.rs
crates/core/src/memory/: mod.rs
crates/core/src/session/: mod.rs
crates/core/tests/: memory_basic_test.rs  memory_integration_test.rs
crates/gateway/: CHANNELS.md  Cargo.toml  TRIGGERS.md
crates/gateway/examples/: with_agent.rs  with_discord.rs
crates/gateway/src/: auth.rs  handlers.rs  handlers.rs.bak  identity.rs  lib.rs  presence.rs  protocol.rs  server.rs  session.rs  triggers.rs
crates/gui/: Cargo.toml  README.md
crates/gui/src/: app.rs  chat_view.rs  input_bar.rs  log_panel.rs  log_store.rs  main.rs  monitor_view.rs  multiline_input.rs  settings_view.rs  sidebar.rs  status_bar.rs  text_input.rs  theme.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/llm/tests/: smoke.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/mcp/tests/: smoke.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/memory/tests/: smoke.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/session/tests/: smoke.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/tests/: smoke.rs
docs/: 00-文档索引.md  01-项目架构说明.md  02-系统设计说明.md  03-扩展说明.md  04-快速开始与运行.md  05-配置说明.md  06-网关与频道集成.md  07-Agent触发机制.md  08-Memory记忆系统.md  09-Discord接入指南.md  10-macOS自动化工具.md  11-GUI桌面客户端.md  12-测试与验证.md  13-开发指南.md
src/: agent.rs  cli.rs  config.rs  error.rs  llm.rs  main.rs  mcp.rs  skills.rs  tools.rs
src/memory/: mod.rs
src/session/: mod.rs
