[package]
name = "gearclaw_channels"
version = "0.1.0"
edition = "2024"

[dependencies]
gearclaw_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"

# Discord dependencies (twilight-rs)
twilight-http = "0.17"
twilight-model = "0.17"
twilight-gateway = "0.17"
