[package]
name = "gearclaw_channels"
version = "0.1.0"
edition = "2021"

[dependencies]
gearclaw_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"

# Discord dependencies (twilight-rs)
# Note: 0.17 requires nightly Rust (edition 2024), using 0.16 for stable
twilight-http = "0.16"
twilight-model = "0.16"
twilight-gateway = "0.16"
