[package]
name = "gearclaw_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
gearclaw_core = { path = "../core" }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
