[package]
name = "gearclaw_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gearclaw_core = { path = "../core" }
gearclaw_gateway = { path = "../gateway" }
gearclaw_channels = { path = "../channels" }
tokio = { version = "1.49", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
