[package]
name = "gearclaw_core"
version = "0.1.0"
edition = "2021"

[dependencies]
gearclaw_llm = { path = "../llm" }
gearclaw_session = { path = "../session" }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "stream"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
dirs = "5.0"
urlencoding = "2.1"
eventsource-stream = "0.2.3"
futures = "0.3.31"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
rustyline = "14"

# MCP support is currently disabled as rmcp SDK requires nightly Rust (edition 2024)
# To re-enable, add rmcp dependency and set feature flag
# [features]
# default = []
# mcp = ["dep:rmcp"]

[dev-dependencies]
tempfile = "3.15"
