[package]
name = "gearclaw_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
gearclaw_core = { path = "../core" }
gearclaw_channels = { path = "../channels" }
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.22"
schemars = { version = "0.8", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.10"
rand = "0.8"
