[package]
name = "gearclaw_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
gearclaw_llm = { path = "../llm" }
glob = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
